# Asteroids

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Application.cpp.91DC292DDE456CC0.idx  Application.hpp.5B7C27BC0883BE16.idx  AsterGame.cpp.BBEF92F3A6EC3690.idx  AsterGame.hpp.25A0FDC9A09A7CA2.idx  AsterShard.cpp.E46F682105D9F23F.idx  AsterShard.hpp.D5A8527A37CD0FDF.idx  Asteroid.cpp.486FD909C3030D85.idx  Asteroid.h.16EF856ED380FB01.idx  Asteroids.cpp.2F2CF4F5AB40208B.idx  Background.cpp.8285FF0556303BAC.idx  Background.hpp.CFEC139309DE1439.idx  BonusAddBullets.cpp.8C03A754C9CF37A2.idx  BonusAddBullets.hpp.57AE6A2E3687689C.idx  BonusBulletSpeed.cpp.1CA9C35DDB611988.idx  BonusBulletSpeed.hpp.F47936CF54833638.idx  BonusObject.cpp.2B34C3FFBE37B19D.idx  BonusObject.hpp.8DA97E19A8F23344.idx  BonusPoints.cpp.ACBA25E86FBEA5EB.idx  BonusPoints.hpp.1FC2EADD3B7AC6E9.idx  Bonuses.cpp.46FF9C1B4220B516.idx  Bonuses.h.15A14DD9BD9C210A.idx  Bullet.cpp.7DC89F4F389237FD.idx  Bullet.hpp.13EB43820F67CC0F.idx  Consts.cpp.8CA1004C81AAE242.idx  Consts.h.6CE3D29C882F3F6E.idx  Exception.h.482CDF2A83DC3CF9.idx  Font.cpp.DEB21A4CFFED753C.idx  Font.hpp.1B197C875C828B78.idx  GameConsts.h.28DC749FB99BF591.idx  GameState.cpp.F50156C000E9A84E.idx  GameState.h.E1951AAE1F9F6A95.idx  HighScoreState.cpp.E60AFFE85BD48DA7.idx  HighScoreState.h.8CE93008B99AB2A0.idx  Log.hpp.EC1A520B78732570.idx  MenuState.cpp.A504F80EA0E78759.idx  MenuState.h.29D1E417ED4ECCC5.idx  Object.cpp.CAB6C2D52300011F.idx  Object.h.33F36577EDBEAEE5.idx  ObjectSound.cpp.0FA7F5AC2423EADD.idx  ObjectSound.h.011B0292E68B466A.idx  (+90 more)
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  HighScores.txt  build.ninja  cmake_install.cmake
debug/gtest/: cmake_install.cmake
debug/src/: cmake_install.cmake
debug/src/engine/: cmake_install.cmake
debug/src/gl/: cmake_install.cmake
debug/src/log/: cmake_install.cmake
debug/src/sdl/: cmake_install.cmake
debug/src/ui/: cmake_install.cmake
debug/src/ui/gstate/: cmake_install.cmake
debug/test/: cmake_install.cmake
debug/test/engine/: cmake_install.cmake
debug/test/sdl/: cmake_install.cmake
debug/test/sdlttf/: cmake_install.cmake
debug/test/ui/: cmake_install.cmake
debug/testsdl/: cmake_install.cmake
gtest/: CMakeLists.txt
html/: index.html  style.css
src/: Asteroids.cpp  Asteroids2010.rc  CMakeLists.txt  CMakelist.txt  Exception.h  Log.cpp  Log.h  Resource.h  SDLApplication.cpp  SDLApplication.h  SDLTools.h  SDLWindow.cpp  SDLWindow.h  splitpath.cpp  splitpath.h  stdafx.cpp  stdafx.h
src/aster/: AsterGame.cpp  AsterGame.h  AsterGame.hpp  AsterShard.cpp  AsterShard.hpp  Asteroid.cpp  Asteroid.h  Background.cpp  Background.hpp  BonusAddBullets.cpp  BonusAddBullets.hpp  BonusBulletSpeed.cpp  BonusBulletSpeed.hpp  BonusObject.cpp  BonusObject.hpp  BonusPoints.cpp  BonusPoints.hpp  Bonuses.cpp  Bonuses.h  Bullet.cpp  Bullet.h  Bullet.hpp  CMakeLists.txt  Consts.cpp  Consts.h  GameConsts.h  Object.cpp  Object.h  ObjectSound.cpp  ObjectSound.h  PowerUp.cpp  PowerUp.hpp  PowerUpAddBullet.cpp  PowerUpAddBullet.hpp  PowerUpBulletSpeed.cpp  PowerUpBulletSpeed.hpp  ScoreCounter.cpp  ScoreCounter.hpp  Ship.cpp  Ship.h  (+18 more)
src/engine/: AsterGame.cpp  AsterGame.h  Asteroid.cpp  Asteroid.h  Bonuses.cpp  Bonuses.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Consts.cpp  Consts.h  GameConsts.h  Object.cpp  Object.h  ObjectSound.cpp  ObjectSound.h  Renderer.cpp  Renderer.h  ScoreCounter.cpp  ScoreCounter.hpp  Ship.cpp  Ship.h  Sound.cpp  Sound.h  TempObject.cpp  TempObject.hpp  TimeInterval.cpp  TimeInterval.hpp  Tools.cpp  Tools.h  Types.h  Ufo.cpp  Ufo.h  World.cpp  World.h
src/gl/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
src/log/: CMakeLists.txt  Log.hpp
src/menu/: CMakeLists.txt  GameFont.cpp  GameFont.h  GameState.cpp  GameState.h  HighScoreState.cpp  HighScoreState.h  MenuState.cpp  MenuState.h  OptionsState.cpp  OptionsState.h  PlayState.cpp  PlayState.h  Rectangle.h  StateManager.cpp  StateManager.h  TextControl.cpp  TextControl.h
src/sdl/: Application.cpp  Application.hpp  CMakeLists.txt  Exception.hpp  SDLApplication.cpp  SDLApplication.h  SDLTools.h  SDLWindow.cpp  SDLWindow.h  Window.cpp  Window.hpp
src/sdl/ut/: TestApplication.cpp
src/sound/: CMakeLists.txt  ObjectSound.cpp  ObjectSound.hpp  Sound.cpp  Sound.hpp  SoundEngine.hpp  SoundSamples.hpp
src/sound/aol/: CMakeLists.txt  SoundEngineOal.cpp  SoundEngineOal.hpp
src/sound/bass/: CMakeLists.txt  MusicEngineBass.cpp  MusicEngineBass.hpp  SoundEngineBass.cpp  SoundEngineBass.hpp  SoundObjectBass.cpp  SoundObjectBass.hpp  SoundSamplesBass.cpp  SoundSamplesBass.hpp
src/sound/bass/ut/: TestSoundSamplesBass.cpp
src/sound/ut/mock/: MockSoundEngine.hpp
src/ui/: CMakeLists.txt  Font.cpp  Font.h  Font.hpp  GameFont.cpp  GameFont.h  Rectangle.cpp  Rectangle.h  TextControl.cpp  TextControl.h
src/ui/gstate/: CMakeLists.txt  GameState.cpp  GameState.h  HighScoreState.cpp  HighScoreState.h  MenuState.cpp  MenuState.h  OptionsState.cpp  OptionsState.h  PlayState.cpp  PlayState.h  StateManager.cpp  StateManager.h
test/: CMakeLists.txt
test/aster/: CMakeLists.txt  TestObject.cpp  TestScoreCounter.cpp  TestTimeInterval.cpp  TestTools.cpp
test/engine/: CMakeLists.txt  TestScoreCounter.cpp
test/sdl/: CMakeLists.txt  TestSDLWindow.cpp  TestWindow.cpp
test/sdlttf/: CMakeLists.txt  TestSDL_ttf.cpp
test/ui/: CMakeLists.txt  TestFont.cpp  TestRectangle.cpp
testsdl/: CMakeLists.txt  TestSDL.cpp  TestState.cpp  TestState.hpp  testsdl_old.cpp
