target_link_libraries(${ASTER_LIB}
    PRIVATE
        OpenGL::GL
        SDL2::SDL2
        ${SDL2_LIBRARIES}
        SDL2_ttf::SDL2_ttf
        ${BASS_LIBRARIES}
)
add_subdirectory(aster)
add_subdirectory(gl)
add_subdirectory(log)
add_subdirectory(sdl)
add_subdirectory(sound)
add_subdirectory(ui)

target_sources(${ASTER_EXE}
    PRIVATE
        Asteroids.cpp
)
target_link_libraries(${ASTER_EXE}
    PRIVATE
        ${ASTER_LIB}
        SDL2::SDL2
)
